Fixing modal spacing.

--- a/frontend/src/App/styles/base/_typography.scss
+++ b/frontend/src/App/styles/base/_typography.scss
@@ -339,12 +339,13 @@
       }
     }
 
-    &--1, &--2 {
+    &--2 {
       margin-bottom: 2.0rem;
     }
 
     &--1 {
       margin-left: 2rem;
+      margin-bottom: 1.0rem;
     }
   }
 }
