--- a/frontend/src/App/styles/components/_modal.scss
+++ b/frontend/src/App/styles/components/_modal.scss
@@ -44,7 +44,7 @@
     margin-left: 4rem;
 
     &--label {
-      margin-left: 2rem;
+      margin-left: 1.0rem;
     }
   }
 }
